--- a/&.html
+++ b/&.html
@@ -98,7 +98,7 @@
         <div class="container-xl overlay">
             <div class="row align-items-center justify-content-center" style="margin-top: 25%;">
                 <div class="col-lg-5 col-xl-7 col-xxl-6">
-                    <h1 class="fw-bolder mb-2 gex logo" style="font-size: 40px;">MoonHack</h1>
+                    <h1 class="fw-bolder mb-2 gex logo" style="font-size: 40px;">Sirple-Client</h1>
                     <p class="lead fw-normal mb-1 gex text-white" style="font-size: 20px;">Предоставляем вам клиент для Minecraft, который гарантирует самые насыщенные и захватывающие впечатления от игры</p>
                     <p class="lead fw-normal mb-5 gex fw-bolder" style="font-size: 14px; color: #B1B2B1;">
                         Наслаждайтесь игрой на новом уровне.
