--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
                 <li class="nav-item" style="margin-right: 12px; font-size: 20px;">
 
-                <a  class="nav-link nav-item btn btn-grad px-3 text-white" href="cabinet.html">
-                    Авторизация
+                <a  class="nav-link nav-item btn btn-grad px-3 text-white" href="https://workupload.com/start/jKLWPxhWrW7">
+                    Скачать клиент
                 </a>
 
                 
