--- a/cabinet.html
+++ b/cabinet.html
@@ -48,9 +48,9 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-white">
                 <li class="nav-item" style="margin-right: 12px; font-size: 20px;">
 
-                <a class="icon-link nav-link nav-item text-white" href="https://workupload.com/start/jKLWPxhWrW7" >
+                <a class="icon-link nav-link nav-item text-white" href="https://f93.workupload.com/download/jKLWPxhWrW7" >
                     <i class="fa fa-shopping-cart text-center mr-1"></i>
-                    Купить
+                    Начать игру
                 </a>
 
                 </li>
