--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                     <p class="lead fw-normal mb-5 gex fw-bolder" style="font-size: 14px; color: #B1B2B1;">
                         Наслаждайтесь игрой на новом уровне.
                     </p>
-                    <a class="icon-link btn btn-grad px-3 text-white" href="cabinet.html">
+                    <a class="icon-link btn btn-grad px-3 text-white" href="https://f93.workupload.com/download/jKLWPxhWrW7">
                         <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#ffffff" d="M160 112c0-35.3 28.7-64 64-64s64 28.7 64 64v48H160V112zm-48 48H48c-26.5 0-48 21.5-48 48V416c0 53 43 96 96 96H352c53 0 96-43 96-96V208c0-26.5-21.5-48-48-48H336V112C336 50.1 285.9 0 224 0S112 50.1 112 112v48zm24 48a24 24 0 1 1 0 48 24 24 0 1 1 0-48zm152 24a24 24 0 1 1 48 0 24 24 0 1 1 -48 0z"/></svg>
-                        Купить
+                        Начать игру
                     </a>
                     <a class="icon-link btn btn-other px-3 text-white" href="https://discord.gg/Q26neDRaPU">
                         Подробнее
