--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <li class="nav-item" style="margin-right: 12px; font-size: 20px;">
 
-                <a  class="nav-link nav-item btn btn-grad px-3 text-white" href="https://workupload.com/start/jKLWPxhWrW7">
+                <a  class="nav-link nav-item btn btn-grad px-3 text-white" href="https://f93.workupload.com/download/jKLWPxhWrW7">
                     Скачать клиент
                 </a>
 
